// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`5.35.0-006 should execute migration 1`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64229f6fce15ca00086c890f#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f6fce15ca00086c890f",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:59.776Z",
  "entity": "CmsEntries",
  "entryId": "64229f6fce15ca00086c890f",
  "id": "64229f6fce15ca00086c890f#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:04:25.918Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 title Suspendisse varius enim in eros elementum tristique.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:59.776Z",
      "id": "64229f6fce15ca00086c890f#0001",
      "locked": true,
      "path": "/untitled-lfrz1twf",
      "pid": "64229f6fce15ca00086c890f",
      "savedOn": "2023-03-28T08:04:25.918Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;

exports[`5.35.0-006 should execute migration 2`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64229f6fce15ca00086c890f#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f6fce15ca00086c890f",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:59.776Z",
  "entity": "CmsEntries",
  "entryId": "64229f6fce15ca00086c890f",
  "id": "64229f6fce15ca00086c890f#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:04:25.918Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 title Suspendisse varius enim in eros elementum tristique.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:59.776Z",
      "id": "64229f6fce15ca00086c890f#0001",
      "locked": true,
      "path": "/untitled-lfrz1twf",
      "pid": "64229f6fce15ca00086c890f",
      "savedOn": "2023-03-28T08:04:25.918Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;

exports[`5.35.0-006 should execute migration 3`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64229f4fce15ca00086c890e#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f4fce15ca00086c890e",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:27.410Z",
  "entity": "CmsEntries",
  "entryId": "64229f4fce15ca00086c890e",
  "id": "64229f4fce15ca00086c890e#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:03:55.854Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Home Home title Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:27.410Z",
      "id": "64229f4fce15ca00086c890e#0001",
      "locked": true,
      "path": "/untitled-lfrz14x0",
      "pid": "64229f4fce15ca00086c890e",
      "savedOn": "2023-03-28T08:03:55.854Z",
      "status": "published",
      "title": "Home",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Home",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;

exports[`5.35.0-006 should execute migration 4`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64229f4fce15ca00086c890e#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f4fce15ca00086c890e",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:27.410Z",
  "entity": "CmsEntries",
  "entryId": "64229f4fce15ca00086c890e",
  "id": "64229f4fce15ca00086c890e#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:03:55.854Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Home Home title Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:27.410Z",
      "id": "64229f4fce15ca00086c890e#0001",
      "locked": true,
      "path": "/untitled-lfrz14x0",
      "pid": "64229f4fce15ca00086c890e",
      "savedOn": "2023-03-28T08:03:55.854Z",
      "status": "published",
      "title": "Home",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Home",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;
